in process of merging....

--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -1,58 +1,14 @@
 
-<!--
-
-<div class="container">
-  <p id="notice"><%= notice %></p>
-
-  <%= form_for(@user, html: { class:"form-inline"} ) do |f| %>
-  <% if @user.errors.any? %>
-  <div id="error_explanation">
-    <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
-
-    <ul>
-      <% user.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-      <% end %>
-    </ul>
-  </div>
-  <% end %>
-
-  <%= fields_for @user.preference do |p| %>
-
-  <div class="form-group">
-    <%= p.label "Health Label" %> was :healthlabel_ids
-    <%= p.select :healthlabel_ids , Healthlabel.all.map{|a| [a.name, a.id]}, {:include_blank => "Select"}, {class: "form-control"} %>
-  </div>
-
-  <div class="form-group">
-    <%= p.label "Diet Label" %> was: :dietlabel_ids
-    <%= p.select :dietlabel_ids, Dietlabel.all.map{|a| [a.name, a.id]}, {:include_blank => "Select"}, {class: "form-control"}  %>
-  </div>
-  <input type="hidden" name="redirect_to" value="home" />
-  <% end %>
-  <%= f.submit "Update preference", class: "btn btn-primary"%>
-
-  <% end %>
--->
+<% content_for(:body_attributes) do %>
+  data-no-turbolink="true"
+<% end %>
 
 
-<h1 class="page-headers">Recommended for You</h1>
-
+<h1 class="page-headers">Recommended for You </h1>
   <p></p>
-  <table class="table">
-    <thead>
-      <tr class="table">
-        <th></th>
-        <th>Recipe</th>
-        <th>Health Label's</th>
-        <th>Diet Label's</th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody id="recipies_rows">
-      <%= render "recipies" , user: @user%>
-    </tbody>
-  </table>
+
+  <span class="insertDynamicData"> </span>
+
 
   <a id="more_btn" href="javascript:void(0);" onclick="more()" class="btn btn-warning pull-right" style="margin-bottom:200px;">Load More</a>
 
@@ -60,6 +16,61 @@
 
 
 <script>
+
+
+function tableData(r, extra) {
+    tdata = ""
+    if (extra == true){
+      tdata+= '<div class="row portfolio">'
+    }
+
+    tdata += '<div class="col-sm-6 col-md-3">'
+    tdata += '<div class="thumbnail" data-toggle="popover" title="'+r["label"]+'" data-content= "'+r["healthLabels"] +' '+r["dietLabels"] +'">'
+    tdata += '<a target="_blank" href="'+r["url"]+'">'
+    tdata += '<img id="saved-image" class="img-responsive" src="'+r["image"]+'" alt="" >'
+    tdata += '<h3 id="recipe-name">'+r["label"]+'</h3> </a>'
+    tdata += '<a href="javascript:void(0);"> Saved </a>'
+
+    // tdata += '<td> <a target="_blank" href="'+r["url"]+'"><img src="'+r["image"]+'" width="120"> &nbsp; </a></td>'
+    // tdata += '<td> <a target="_blank" href="'+r["url"]+'">'+r["label"]+' </a></td>'
+    // tdata += ' <td> '+r["healthLabels"] +' </td>'
+    // tdata += '<td> '+r["dietLabels"] + '</td>'
+    // tdata += ' <td><a href="javascript:void(0);"> Saved </a>'
+    // tdata += '</td>'
+    tdata += '</div> '
+    tdata += '</div>'
+    if (extra== true ){
+      tdata += '</div> '
+    }
+  return tdata
+}
+
+$(document).ready(function(){
+  var links = []
+  var foundItems = []
+  var finishedCalls = 0
+    console.log("RUNNING NOW")
+    <% @foundLinks.each do |fl| %>
+
+    $.ajax({
+      method: "GET",
+      url: "<%= individual_recipes_user_path(@user) %>",
+      data: {uri: "<%= fl %>"}
+    }).done(function(resp) {
+      foundItems.push(resp)
+      finishedCalls += 1
+      if (finishedCalls % 4 == 0 ){
+        $(".insertDynamicData").append(tableData(foundItems[finishedCalls-1],true))
+      }
+      else {
+        $(".insertDynamicData").append(tableData(foundItems[finishedCalls-1],false))
+      }
+
+    })
+    <% end %>
+})
+
+
 function more(){
   $("#more_btn").addClass("disabled","disabled");
   $("#more_btn").removeClass( "btn-warning");
@@ -78,6 +89,8 @@ function more(){
     $("#more_btn").text( "Load More");
   });
 }
+
+
 
 
 
