--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,3 +5,7 @@
 
 <a href="#"><%= link_to 'Back', welcome_index_path %></a>
 </div>
+
+<script>
+ $(".chosen-select").chosen({width: "37%"}); 
+</script>
