--- a/app/views/users/my_recipes.html.erb
+++ b/app/views/users/my_recipes.html.erb
@@ -1,27 +1,30 @@
 
 <div class="container">
 <h1 class="page-headers"> Saved Recipes</h2>
+  <% if @recipes %>
   <% if @recipes.size == 0 %>
-    <p class="well"> No saved recipes... yet!</p>
-  <% end %>
+      <p class="well"> No saved recipes... yet!</p>
+    <% end %>
 
   <% if @recipes.size > 0%>
-  <% @recipes.in_groups_of(4,false).each do |group| %>
-  <div class="row portfolio"> <!-- only have a new row every 3 rows -->
-    <% group.each do |r| %>
-    <div class="col-sm-6 col-md-3">
-      <div class="thumbnail" data-toggle="popover" title="<%= r.recipe_name%>" data-content= " get ingredients/ labels here... ">
-      <a target="_blank" href="<%= recipe_path(r) %>">
-      <img id="saved-image" class="img-responsive" src="<%= r.image_url%>" alt="" >
-      <h3 id="recipe-name"><%= r.recipe_name %></h3> </a>
-      <p ><a id="remove-recipe" href="javascript:void(0);" onclick="unsave_recipe($(this),'<%= r['uri'] %>')"><i class="material-icons">delete_forever</i> Remove</a></p>
-    </div>
-    </div>
-    <%end%>
-  </div>
-  <% end %>
 
-  <%end %>
+    <% @recipes.in_groups_of(4,false).each do |group| %>
+    <div class="row portfolio"> <!-- only have a new row every 3 rows -->
+      <% group.each do |r| %>
+      <div class="col-sm-6 col-md-3">
+        <div class="thumbnail" data-toggle="popover" title="<%= r.recipe_name%>" data-content= " get ingredients/ labels here... ">
+        <a target="_blank" href="<%= recipe_path(r) %>">
+        <img id="saved-image" class="img-responsive" src="<%= r.image_url%>" alt="" >
+        <h3 id="recipe-name"><%= r.recipe_name %></h3> </a>
+        <p ><a id="remove-recipe" href="javascript:void(0);" onclick="unsave_recipe($(this),'<%= r['uri'] %>')"><i class="material-icons">delete_forever</i> Remove</a></p>
+      </div>
+      </div>
+      <%end%>
+    </div>
+    <% end %>
+
+    <%end %>
+  <%end%>
 </div>
 
 <!--- should this be added to a javascript file instead of within this page?? --->
