--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,5 @@
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.6.2/chosen.css">
+
 <div class="container">
 <h1>New User</h1>
 
@@ -7,5 +9,5 @@
 </div>
 
 <script>
- $(".chosen-select").chosen({width: "37%"}); 
+ $(".chosen-select").chosen({width: "37%"});
 </script>
