--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -40,54 +40,34 @@
     </div>
   <% end %>
 
-  <%= fields_for @user.preference do |p| %> 
+  <%= fields_for @user.preference do |p| %>
 
-<<<<<<< HEAD
-  <div class="field">
-    <%= p.label "Health Label" %> <!--- was :healthlabel_ids -->
-    <%= p.select :healthlabel_ids , Healthlabel.all.map{|a| [a.name, a.id]}, :include_blank => "Select" %>
-  </div>
-
-  <div class="field">
-    <%= p.label "Diet Label" %> <!--- was :dietlabel_ids -->
-    <%= p.select :dietlabel_ids, Dietlabel.all.map{|a| [a.name, a.id]}, :include_blank => "Select" %>
-=======
 
   <div class="chosen-field">
     <%= p.label "Health Label" %><!--- was :healthlabel_ids -->
-    <%= p.select( :healthlabel_ids , Healthlabel.all.map{|a| [a.name, a.id]}, { :prompt => ""}, { :multiple => true, class: 'chosen-select' } )%>
+    <%= p.select :healthlabel_ids , Healthlabel.all.map{|a| [a.name, a.id]}, { :prompt => ""}, { :multiple => true, class: 'chosen-select' } %>
   </div>
 
   <div class="chosen-field">
     <%= p.label "Diet Label" %> <!--- was :dietlabel_ids -->
     <%= p.select :dietlabel_ids, Dietlabel.all.map{|a| [a.name, a.id]}, { :prompt => ""}, { :multiple => true, class: 'chosen-select' } %>
->>>>>>> apiupdate
+
   </div>
   <%end%>
 <% else %>
   <%= fields_for @preference do |p| %>
 
-<<<<<<< HEAD
-  <div class="field">
-    <%= p.label "Health Label" %> <!--- was :healthlabel_ids -->
-    <%= p.select :healthlabel_ids , Healthlabel.all.map{|a| [a.name, a.id]}, :include_blank => "Select" %>
-=======
+
   <div class="chosen-field">
     <%= p.label "Health Label" %> <!--- was :healthlabel_ids -->
     <%= p.select :healthlabel_ids , Healthlabel.all.map{|a| [a.name, a.id]}, { :prompt => ""}, { :multiple => true, class: 'chosen-select' }   %>
->>>>>>> apiupdate
-  </div>
-<br/>
 
-<<<<<<< HEAD
-  <div class="field">
-    <%= p.label "Diet Label" %> <!--- was :dietlabel_ids -->
-    <%= p.select :dietlabel_ids, Dietlabel.all.map{|a| [a.name, a.id]}, :include_blank => "Select" %>
-=======
+  </div>
+
   <div class="chosen-field">
     <%= p.label "Diet Label" %> <!--- was :dietlabel_ids -->
     <%= p.select :dietlabel_ids, Dietlabel.all.map{|a| [a.name, a.id]}, { :prompt => ""}, { :multiple => true, class: 'chosen-select' }   %>
->>>>>>> apiupdate
+
   </div>
   <%end%>
 
