--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,5 @@
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.6.2/chosen.css">
+
 <h1>Editing User</h1>
 
 <%= render 'form', user: @user %>
@@ -5,5 +7,5 @@
 <%= link_to 'Show', @user %> |
 <%= link_to 'Back', users_path %>
 <script>
- $(".chosen-select").chosen({width: "37%"}); 
+ $(".chosen-select").chosen({width: "37%"});
 </script>
