--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -1,3 +1,5 @@
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/js/bootstrap.js"></script>
 
 <% content_for(:body_attributes) do %>
   data-no-turbolink="true"
@@ -9,14 +11,16 @@
 
   <span class="insertDynamicData"> </span>
 
-
   <a id="more_btn" href="javascript:void(0);" onclick="more()" class="btn btn-warning pull-right" style="margin-bottom:200px;">Load More</a>
 
 </div>
 
 
 <script>
-
+$('[data-toggle="popover"]').popover({
+  placement: "auto",
+  trigger: "hover"
+})
 
 function tableData(r, extra) {
     tdata = ""
@@ -29,7 +33,7 @@ function tableData(r, extra) {
     tdata += '<a target="_blank" href="'+r["url"]+'">'
     tdata += '<img id="saved-image" class="img-responsive" src="'+r["image"]+'" alt="" >'
     tdata += '<h3 id="recipe-name">'+r["label"]+'</h3> </a>'
-    tdata += '<a href="javascript:void(0);"> Saved </a>'
+    tdata += '<a href="javascript:void(0);"><i class="material-icons">save</i> Save </a>'
 
     // tdata += '<td> <a target="_blank" href="'+r["url"]+'"><img src="'+r["image"]+'" width="120"> &nbsp; </a></td>'
     // tdata += '<td> <a target="_blank" href="'+r["url"]+'">'+r["label"]+' </a></td>'
@@ -40,7 +44,7 @@ function tableData(r, extra) {
     tdata += '</div> '
     tdata += '</div>'
     if (extra== true ){
-      tdata += '</div> '
+      tdata += '</div>'
     }
   return tdata
 }
@@ -66,7 +70,7 @@ $(document).ready(function(){
         $(".insertDynamicData").append(tableData(foundItems[finishedCalls-1],false))
       }
 
-    })
+    });
     <% end %>
 })
 
@@ -76,7 +80,6 @@ function more(){
   $("#more_btn").removeClass( "btn-warning");
   $("#more_btn").addClass( "btn-default");
   $("#more_btn").text( "Loading...");
-
   $.ajax({
     method: "GET",
     url: "<%= home_user_path(@user) %>",
@@ -91,9 +94,6 @@ function more(){
 }
 
 
-
-
-
 function save_recipe(ele,url){
   $(ele).text("Saving..");
   $.ajax({
@@ -106,4 +106,6 @@ function save_recipe(ele,url){
       $(ele).addClass("disabled","disabled");
   });
 }
+
+
 </script>
