comment board in progress

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -46,4 +46,16 @@
         <% end %>
       </div>
     </div>
+
+    <br>
+
+    <div id="commen_board">
+      <h4>Comment Board</h4>
+      <%= form_for @user do |f| %>
+        <%= f.label :comment_text %>
+        <%= f.text_field :comment_text %>
+        <%= f.submit %>
+      <% end %>
+
+    </div>
   </div>
