search bar with help of hussain

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
             <li class="left">
               <!-- For now, can only search if a current user, -->
               <%if current_user.present?%>
-                <%= form_tag home_user_path(current_user), :method => 'get' do %>
+                <%= form_tag search_user_path(current_user), :method => 'get' do %>
                   <p>
               <%= text_field_tag :search, params[:search], class: "left" %>
               <%= submit_tag "Search", :name => nil, class: "left" %>
