--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -6,12 +6,13 @@
     <div class="col-xs-6">
       <div class="row">
         <div class="col-xs-4">
-
+          <a target="_blank" href="<%= @recipe['url']%>">
           <img src="<%= @recipe["image"] %>" width="100"/>
-
+        </a>
         </div>
         <div class="col-xs-8">
-          <h3><%= @recipe['label'] %></h3>
+          <a target="_blank" href="<%= @recipe['url']%>">
+          <h3><%= @recipe['label'] %></h3></a>
           <b style="color:blue;">* Information below is for 1 serving</b>
         </div>
       </div>
