added integration test and fix bugs

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -10,14 +10,16 @@
 		    	Hello <%= current_user.username %>
 		    </h1>
 		  <% end %>
+
+      <!---
 				<div class="input-group stylish-input-group">
 		    <input type="text" class="mainSearch form-control" placeholder="Search Recipes..">
 		    <span class="input-group-addon">
 		        <button type="submit">
 		            <i class="material-icons">search</i>
-		        </button>  
+		        </button>
 		    </span>
-		  </div>
+		  </div> --->
 	  </div>
 	</div>
 </div>
