--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -6,28 +6,32 @@
     <div class="col-xs-6">
       <div class="row">
         <div class="col-xs-4">
+          <% if @recipe %>
           <a target="_blank" href="<%= @recipe['url']%>">
           <img src="<%= @recipe["image"] %>" width="100"/>
+          <% end %>
         </a>
         </div>
         <div class="col-xs-8">
-          <a target="_blank" href="<%= @recipe['url']%>">
-          <h3><%= @recipe['label'] %></h3></a>
-          <b style="color:blue;">* Information below is for 1 serving</b>
+          <% if @recipe %>
+            <a target="_blank" href="<%= @recipe['url']%>">
+            <h3><%= @recipe['label'] %></h3></a>
+            <b style="color:blue;">* Information below is for 1 serving</b>
+          </div>
         </div>
-      </div>
 
-        <h4><%= @recipe["ingredients"].size %> Ingredients</h4>
-        <% @recipe["ingredientLines"].each do |i| %>
-        <p><%= i %></p>
-        <% end %>
+          <h4><%= @recipe["ingredients"].size %> Ingredients</h4>
+          <% @recipe["ingredientLines"].each do |i| %>
+          <p><%= i %></p>
+          <% end %>
 
-        <p><b>Diet Labels:</b> <%= @recipe["dietLabels"].tr('[ ] " ', '')   rescue @recipe["dietLabels"] %></p>
-        <p><b>Health Labels:</b> <%= @recipe["healthLabels"].tr('[ ] " ', '')  rescue @recipe["healthLabels"]%></p>
-        <p>Cautions: <%= @recipe["cautions"].tr('[ ] " ', '')  rescue @recipe["cautions"] %></p>
+          <p><b>Diet Labels:</b> <%= @recipe["dietLabels"].tr('[ ] " ', '')   rescue @recipe["dietLabels"] %></p>
+          <p><b>Health Labels:</b> <%= @recipe["healthLabels"].tr('[ ] " ', '')  rescue @recipe["healthLabels"]%></p>
+          <p>Cautions: <%= @recipe["cautions"].tr('[ ] " ', '')  rescue @recipe["cautions"] %></p>
 
-        <p><b>Calories/Serving:</b> <%= @recipe["calories"].to_f.round %></p>
-        <p>Total weight: <%= @recipe["totalWeight"] %></p>
+          <p><b>Calories/Serving:</b> <%= @recipe["calories"].to_f.round %></p>
+          <p>Total weight: <%= @recipe["totalWeight"] %></p>
+          <% end %>
 
       </div>
       <div class="col-xs-6">
