added facebook share button, need further testing

--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -63,10 +63,8 @@ table.td {
 
 }
 
-input.mainSearch{
-  width: 35%;
-  height: 20%;
-  font-size: 30px;
+div.homepage_searchbar {
+  font-size: 25px;
 }
 
 
