--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -23,7 +23,12 @@
             <img id = "saved-image"  class="img-responsive" src="<%= r["image"] %>" width="130"> </a>
             <h3 id="recipe-name"><%= r["label"] %></h3> </a>
             <% if current_user %>
-              <p ><i class="material-icons">save</i> <a href="javascript:void(0);" onclick="save_recipes($(this),'<%= r.to_json %>')">Save Recipe</a></p>
+              <% if r["rExist"] == 1 %>
+                <p ><i class="material-icons">save</i> <a href="javascript:void(0);" onclick="save_recipes($(this),'<%= r.to_json %>')">Saved</a></p>
+              <% else %>
+                <p ><i class="material-icons">save</i> <a href="javascript:void(0);" onclick="save_recipes($(this),'<%= r.to_json %>')">Save Recipe</a></p>
+              <% end %>
+
             <% else %>            
             
             <% end %>
