--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,7 +17,6 @@ a{ /* set default font size of text to 35px */
 
 li, .dropButton{
   font-size: 20px;
-
   padding: 14px 16px;
   text-decoration: none;
 
@@ -82,6 +81,15 @@ body{
 #remove-recipe{
   font-size:120%;
   }
-.mainSearch .form-control{
-  
+
+
+.advanced-dropdown {
+  height:500px;
+}
+
+
+.advanced-dropdown li {
+  margin: auto;
+  width: 100%;
+
 }
