--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,24 +25,50 @@
         </div>
         <div>
           <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Advanced Options<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                <div class="advanced-dropdown" style="overflow-y: scroll">
+                  <%= form_tag users_search_path, :method => 'get' do %>
+                    <li> Health labels </li>
+                    <% Healthlabel.all.each do |hlabel| %>
+                      <% if searchableHealthLabels.include? hlabel.id %>
+                        <li class="advanced-params"> 
+                          <% if params["healthlabel_apiparameters"] %>
+                            <% if params["healthlabel_apiparameters"].include? hlabel.apiparameter %>
+                                <%= check_box_tag 'healthlabel_apiparameters[]', hlabel.apiparameter, true %>
+                            <% else %>
+                                <%= check_box_tag 'healthlabel_apiparameters[]', hlabel.apiparameter -%>                   
+                            <% end %>
+                          <% else %>
+                              <%= check_box_tag 'healthlabel_apiparameters[]', hlabel.apiparameter -%>   
+                          <% end %>
+                          <%= h hlabel.name -%>
+                        </li>
+                        <% end %>
+                    <%end%>
+                    <li> Diet labels </li>
+                    <% Dietlabel.all.each do |dlabel| %>
+                      <% if searchableDietLabels.include? dlabel.id %>
+                    <li class="advanced-params" > 
+                      <%= check_box_tag 'dietlabel_apiparameters[]', dlabel.apiparameter -%>
+                      <%= h dlabel.name -%>
+                    </li>
+                    <% end %>
+                  <%end%>
+
+                  <li> Minimum Calories: <%= text_field_tag :mincalories, params[:mincalories] %> </li>
+                  <li> Maximum Calories: <%= text_field_tag :maxcalories, params[:maxcalories] %> </li>
+
+                  </div>
+                </ul>
+              </li> <!-- dropdown -->
+
             <li class="left">
-                <%= form_tag users_search_path, :method => 'get' do %>
-                  <p>
+                
+                
               <%= text_field_tag :search, params[:search], class: "left" %>
               <%= submit_tag "Search", :name => nil, class: "left" %>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Advanced<span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                  <li class="submenu"><%= collection_check_boxes(:post, :healthlabel_ids, Healthlabel.all, :id, :name) do |b| %> </li>
-                  <div class="collection-check-box">
-                    <%= b.check_box %>
-                    <%= b.label %>
-                  </div>
-                <% end %>
-              </ul>
-            </li> <!-- dropdown -->
-
-                 </p>
 
               <% end %>
             </li>
