hitting recipe thumbnail does not open a new tab anymore

--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -32,7 +32,8 @@ function tableData(r, extra) {
     }
     tdata += '<div class="col-sm-6 col-md-3">'
     tdata += '<div class="thumbnail" data-toggle="popover" title="'+r["label"]+'" data-content= "'+r["healthLabels"] +' '+r["dietLabels"] +'">'
-    tdata += '<a target="_blank" href="'+r["url"]+'">'
+    //tdata += '<a href="'+r["url"]+'">'
+    tdata += '<a href="javascript:void(0);" onclick="save_recipe_to_db($(this),'+"'"+r['uri']+"'"+')">'
     tdata += '<img id="saved-image" class="img-responsive" src="'+r["image"]+'" alt="" >'
     tdata += '<h3 id="recipe-name">'+r["label"]+'</h3> </a>'
     if (r["rExist"] == 1) {
@@ -126,6 +127,11 @@ function save_recipes(ele, recipeURI){
       $(ele).text("Saved");
       $(ele).addClass("disabled","disabled");
   });
+}
+
+
+function save_recipe_to_db(recipeURI){
+
 }
 
 </script>
