--- a/app/views/users/my_recipes.html.erb
+++ b/app/views/users/my_recipes.html.erb
@@ -16,7 +16,7 @@
       <% group.each do |r| %>
       <div class="col-sm-6 col-md-3">
         <div class="thumbnail" data-toggle="popover" title="<%= r.title%>" data-content= "<%= r.dietLabels %> <%= r.healthLabels%> ">
-        <a target="_blank" href="<%= recipe_path(r) %>">
+        <a href="<%= recipe_path(r) %>">
         <img id = "saved-image"  class="img-responsive" src="<%= r.sourceIcon %>" width="130"> </a>
         <h3 id="recipe-name"><%= r.title %></h3> </a>
         <p ><i class="material-icons">save</i> <a href="javascript:void(0);" onclick="unsave_recipe($(this),'<%= r['source'] %>')">Remove</a></p>
