--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -55,6 +55,7 @@
       <%= form_tag("/recipes", method: "post", :remote => true) do %>
         <%= label_tag :comment_text %>
         <%= text_field_tag :comment_text %><br>
+        <%= radio_button_tag :vote , 'upvote', :checked => 1%>
         <%= hidden_field_tag :recipe_id, params[:id] %>
         <div class="actions">
           <%= submit_tag "Submit Comment" ,class: "btn btn-primary" %>
