--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,7 +5,8 @@
 <div class="recipes_of_the_week">
   <h2>Popular Recipes of the Week</h2>
   <% @recipes.each do |r| %>
-    <img id = "saved-image"  class="img-responsive" src="<%= r.sourceIcon %>" width="130">
+    <a href="<%= recipe_path(r) %>">
+    <img id = "saved-image"  class="img-responsive" src="<%= r.sourceIcon %>" width="130"></a>
   <%end%>
 </div>
 <div class="container">
